# planwise

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile-dev  Dockerfile-firefox-debug  Dockerfile-firefox-debug_entry_point.sh  LICENSE.md  README.md  TODO.org  build.sh  circle.yml  deploy.sh  docker-cloud.sample.yml  docker-compose-features.yml  docker-compose.base.yml  docker-compose.ci.yml  docker-compose.production.yml  docker-compose.setup.yml  docker-compose.yml  docker-env  env  package-lock.json  package.json  project.clj
.circleci/: config.yml
client/: README.md  package-lock.json  package.json  shadow-cljs.edn
common/: README.md
cpp/: CMakeLists.txt  Dockerfile  Makefile  aggregate-population  aggregate-population.cpp  bin-trampoline.sh  calculate-demand.cpp  count-population.cpp  walking-coverage.cpp
dev/: dev.clj
doc/: Database-Setup.md  backups.md  coverage_algo.md  mapconfig.xml  osm_data.md  polygon_clipping_algorithms.md
docker/: Dockerfile-0.7.3.1  import-sites  osm2pgrouting  push
features/: Gemfile  README.md  docker-compose.yml  down.sh  pull.sh  start.sh  stop.sh  up.sh
isochrone-spike/: .gitignore  README.md  calc.py  concern.py  test.py
mapserver/: Dockerfile.kenya-data  Dockerfile.kenya-mapcache  Dockerfile.kenya-mapserver  Dockerfile.mapserver  README.md  build-and-push.sh  deploy.sh  docker-compose.yml  kenya.map  mapcache.xml  mapserver.conf  partition.py  planwise.map
osx/: osm2pgrouting
prod/: boot.cljs  externs.js
rust/: README.md
scripts/: Dockerfile  Makefile  backuprestore-tables.sql  bootstrap-dev.sh  build-binaries  calculate_aligned_extent.sql  create_ways_nodes.sql  crop-source-raster  dev  import-osm  import-osm.sh  import-sites  isochrone-population  load-regions  migrate  osm2pgr-tables.sql  preprocess-isochrones  preprocess_catchment_polygons.sql  raster-isochrone  (+7 more)
(+659 files in other folders)
